aau/sf_autobackup/objects/Bus_Stop__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Is the stop active or not.</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>High_Fidelity_Waypoint__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If true, this is a preprocessed waypoint only meant for accurately drawing the route on the screen.  If false, it is an actual location that a bus will stop at.</description>
        <inlineHelpText>If true, this is a preprocessed waypoint only meant for accurately drawing the route on the screen.  If false, it is an actual location that a bus will stop at.</inlineHelpText>
        <label>High Fidelity Waypoint</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lat__c</fullName>
        <description>Latitude of the Bus Stop</description>
        <label>Lat</label>
        <precision>12</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Long__c</fullName>
        <description>Longitude of the Bus Stop</description>
        <label>Long</label>
        <precision>12</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <defaultValue>0</defaultValue>
        <description>What order should this stop show in the stop list.</description>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Routes_Count__c</fullName>
        <label>Routes Count</label>
        <summaryForeignKey>Bus_Stops_Routes__c.Bus_Stop__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Bus Stop</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>Lat__c</columns>
        <columns>Long__c</columns>
        <columns>Order__c</columns>
        <columns>Routes_Count__c</columns>
        <columns>High_Fidelity_Waypoint__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Bus Stop Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bus Stops</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>